--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "test": "export NODE_ENV=test && npm run db:reset && npm run db:migrate && nyc --reporter=text --reporter=lcov mocha ./tests --require babel-polyfill --require babel-register --exit --recursive",
     "build": "rm -rf dist/ && babel ./server --out-dir dist/ --ignore ./node_modules",
     "start:dev": "node_modules/nodemon/bin/nodemon.js --exec babel-node server/index.js",
-    "db:migrate": "node_modules/.bin/sequelize db:migrate && npm run db:seed:all",
+    "db:migrate": "node_modules/.bin/sequelize db:migrate",
     "db:reset": "node_modules/.bin/sequelize db:migrate:undo:all",
     "db:seed:all": "node_modules/.bin/sequelize  db:seed:all",
-    "db:seed-reset": "node_modules/.bin/sequelize  db:seed:undo:all"
+    "db:seed-reset": "node_modules/.bin/sequelize  db:seed:undo:all" 
   },
   "engines": {
     "node": "10.13.0"
